2007-09-11  Wim Taymans  <wim.taymans@gmail.com>

	* docs/design/part-live-source.txt:
	Add docs on how live sources should timestamp.

	* libs/gst/base/gstbasesrc.c: (gst_base_src_do_sync):
	Add some more debug info.
	For subclasses that are live and like to sync, add aditional startup
	latency to sync time and timestamps so that we timstamp according to the
	design doc.

2007-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstbuffer.c:
	  Also do a g_type_class_ref() for the subbuffer type in
	  the init function.

2007-09-11  Wim Taymans  <wim.taymans@gmail.com>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstpad.c: (gst_pad_peer_query):
	* gst/gstpad.h:
	Add function to perform a query on the peer of a pad.
	API: gst_pad_peer_query()

2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/gst/gstsystemclock.c:
	  Cleanup the test a little (use gst-logging and not g_message). Improve
	  test to check if a wait reached the target.

2007-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/gstreamer-libs-sections.txt:
	  Add new API to docs and fix the build.

2007-09-10  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_class_init),
	(gst_base_src_init), (gst_base_src_set_do_timestamp),
	(gst_base_src_get_do_timestamp), (gst_base_src_set_property),
	(gst_base_src_get_property), (gst_base_src_do_sync):
	* libs/gst/base/gstbasesrc.h:
	Add property to make the basesrc timestamp buffers based on the current
	running time.
	API: GstBaseSrc::do-timestamp
	API: gst_base_src_set_do_timestamp()
	API: gst_base_src_get_do_timestamp()

2007-09-08  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/random/release:
	  Really make sure translations are up-to-date before
	  a release (#465010).

2007-09-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstregistrybinary.c: (gst_registry_binary_read_cache):
	Always destroy the timer, also in error cases.
