@@ -1,3 +1,12 @@
+2007-09-12  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/gsturi.c: (gst_uri_get_location):
+	  If there's no hostname, we want to return 'c:/foo/bar.txt'
+	  and not '/c:/foo/bar.txt' on Windows. Fixes #469402.
+
+	* tests/check/gst/gsturi.c:
+	  Unit test for the above and a few more things.
+
 2007-09-11  Wim Taymans  <wim.taymans@gmail.com>
 
 	* docs/design/part-live-source.txt:
